# price_tracker_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements.txt
api/: models.py  serializers.py  tasks.py  urls.py  views.py
price_tracker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
